--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="style.css">
   <title>Random Quotes</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
   <div style="text-align: center;" >
     <button onclick="generate()" type="button" class="btn btn-info">Generate</button>
     </div>
-  <script src="script3.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
